--- a/aboutus.html
+++ b/aboutus.html
@@ -37,7 +37,7 @@
                         </div>
                         <ul class="header__nav">
                             <li class="header__item"><a href="index.html" class="header__item-link active">home</a></li>
-                            <li class="header__item"><a href="#" class="header__item-link">services</a></li>
+                            <li class="header__item"><a href="#" class="header__item-link">services1</a></li>
                             <li class="header__item"><a href="#" class="header__item-link">portfolio</a></li>
                             <li class="header__item"><a href="#" class="header__item-link">testimonial</a></li>
                             <li class="header__item"><a href="#" class="header__item-link">team</a></li>
