--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                                 
                                 <ul class="header__nav-p2 ">
                                     <li class="header__item-p2">
-                                        <a href="aboutus.html" class="header__item-link-p2">About us</a>
+                                        <a href="aboutus.html" class="header__item-link-p2">About us1</a>
                                         <a href="blog.html" class="header__item-link-p2">Block</a>
                                         <a href="singleblog.html" class="header__item-link-p2">Single block</a>
                                         <a href="portfolio.html" class="header__item-link-p2">portfolio</a>
