--- a/aboutus.html
+++ b/aboutus.html
@@ -38,8 +38,8 @@
                         <ul class="header__nav">
                             <li class="header__item"><a href="index.html" class="header__item-link active">home</a></li>
                             <li class="header__item"><a href="#" class="header__item-link">services</a></li>
-                            <li class="header__item"><a href="#" class="header__item-link">portfolio1</a></li>
-                            <li class="header__item"><a href="#" class="header__item-link">testimonial</a></li>
+                            <li class="header__item"><a href="#" class="header__item-link">portfolio2</a></li>
+                            <li class="header__item"><a href="#" class="header__item-link">testimonial3</a></li>
                             <li class="header__item"><a href="#" class="header__item-link">team</a></li>
                             <li class="header__item"><a href="#" class="header__item-link">pricing</a></li>
                             <li class="header__item"><a href="#" class="header__item-link">news</a></li>
